--- a/CodeStockApp/View/AddView.storyboard
+++ b/CodeStockApp/View/AddView.storyboard
@@ -73,6 +73,15 @@
                                     <action selector="selectSeasonButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="JAZ-5x-7fs"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EQg-Hl-aEw">
+                                <rect key="frame" x="31" y="577" width="113" height="35"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Add Picture"/>
+                                <connections>
+                                    <action selector="addImageButtonAction:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="Yyk-o5-3oO"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
