--- a/CodeStockApp/MainTableViewCell.xib
+++ b/CodeStockApp/MainTableViewCell.xib
@@ -9,11 +9,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="502" id="KGk-i7-Jjw" customClass="MainTableViewCell" customModule="CodeStockApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="502"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="604" id="KGk-i7-Jjw" customClass="MainTableViewCell" customModule="CodeStockApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="443" height="604"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="502"/>
+                <rect key="frame" x="0.0" y="0.0" width="443" height="604"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2024/04/01" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="17b-7a-GBW">
@@ -23,46 +23,36 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Oyg-6M-f98">
-                        <rect key="frame" x="265" y="8" width="47" height="35"/>
+                        <rect key="frame" x="388" y="8" width="47" height="34.333333333333336"/>
                         <state key="normal" title="Button"/>
                         <buttonConfiguration key="configuration" style="plain" title="•••"/>
                     </button>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3kD-bP-nh7">
-                        <rect key="frame" x="17" y="44" width="286" height="370"/>
+                        <rect key="frame" x="0.0" y="44" width="443" height="525"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="370" id="RWw-Vg-3YB"/>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="393" id="G7t-7f-bf5"/>
+                            <constraint firstAttribute="height" constant="525" id="hwe-h0-hIe"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ブランド名・・・ユニクロ" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ifu-tX-LrC">
-                        <rect key="frame" x="17" y="419" width="286" height="68"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="ブランド名・・・ユニクロ" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ifu-tX-LrC">
+                        <rect key="frame" x="7" y="571" width="428" height="20.333333333333371"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="Oyg-6M-f98" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="5D4-eT-P7v"/>
-                    <constraint firstItem="3kD-bP-nh7" firstAttribute="top" secondItem="Oyg-6M-f98" secondAttribute="bottom" constant="1" id="8io-gD-l6n"/>
-                    <constraint firstItem="3kD-bP-nh7" firstAttribute="top" secondItem="Oyg-6M-f98" secondAttribute="bottom" constant="1" id="AKg-If-jeJ"/>
-                    <constraint firstItem="Ifu-tX-LrC" firstAttribute="top" secondItem="3kD-bP-nh7" secondAttribute="bottom" constant="5" id="B5w-u2-N64"/>
-                    <constraint firstItem="3kD-bP-nh7" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="17" id="ESn-kL-ckC"/>
-                    <constraint firstAttribute="trailing" secondItem="3kD-bP-nh7" secondAttribute="trailing" constant="17" id="OEZ-l9-ePE"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="3kD-bP-nh7" secondAttribute="trailing" constant="1" id="OXS-Dd-3rc"/>
-                    <constraint firstItem="3kD-bP-nh7" firstAttribute="trailing" secondItem="Ifu-tX-LrC" secondAttribute="trailing" id="Ohe-nQ-Pmp"/>
-                    <constraint firstItem="17b-7a-GBW" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="Prg-G2-Hhw"/>
-                    <constraint firstAttribute="bottom" secondItem="3kD-bP-nh7" secondAttribute="bottom" constant="88" id="QxN-Wi-UGk"/>
-                    <constraint firstItem="Ifu-tX-LrC" firstAttribute="top" secondItem="3kD-bP-nh7" secondAttribute="bottom" constant="5" id="TGx-Nd-PaY"/>
-                    <constraint firstAttribute="bottom" secondItem="Ifu-tX-LrC" secondAttribute="bottom" constant="15" id="ZmV-Fu-B74"/>
-                    <constraint firstItem="3kD-bP-nh7" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="1" id="agU-4b-xdj"/>
-                    <constraint firstItem="Ifu-tX-LrC" firstAttribute="top" secondItem="3kD-bP-nh7" secondAttribute="bottom" constant="5" id="dDX-FA-Fjt"/>
-                    <constraint firstItem="Ifu-tX-LrC" firstAttribute="top" secondItem="3kD-bP-nh7" secondAttribute="bottom" constant="5" id="esw-wV-Tt2"/>
-                    <constraint firstItem="Ifu-tX-LrC" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="17" id="fJ3-ZB-lpG"/>
-                    <constraint firstAttribute="trailing" secondItem="Ifu-tX-LrC" secondAttribute="trailing" constant="17" id="gwo-UT-13x"/>
-                    <constraint firstAttribute="trailing" secondItem="Oyg-6M-f98" secondAttribute="trailing" constant="8" id="hOc-cz-5as"/>
-                    <constraint firstItem="17b-7a-GBW" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="m0z-6T-5ua"/>
-                    <constraint firstItem="3kD-bP-nh7" firstAttribute="leading" secondItem="Ifu-tX-LrC" secondAttribute="leading" id="u4g-W4-pWV"/>
-                    <constraint firstItem="3kD-bP-nh7" firstAttribute="top" secondItem="Oyg-6M-f98" secondAttribute="bottom" constant="1" id="vmh-qX-qbN"/>
-                    <constraint firstItem="3kD-bP-nh7" firstAttribute="top" secondItem="Oyg-6M-f98" secondAttribute="bottom" constant="1" id="wHx-3R-BJs"/>
+                    <constraint firstAttribute="trailing" secondItem="Ifu-tX-LrC" secondAttribute="trailing" constant="8" id="5fj-0B-CYf"/>
+                    <constraint firstItem="3kD-bP-nh7" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="6Zn-jd-cyQ"/>
+                    <constraint firstItem="Oyg-6M-f98" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="DJG-qc-C2d"/>
+                    <constraint firstAttribute="trailing" secondItem="Oyg-6M-f98" secondAttribute="trailing" constant="8" id="DyV-fh-WoU"/>
+                    <constraint firstItem="17b-7a-GBW" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="JZb-KE-Osd"/>
+                    <constraint firstItem="Ifu-tX-LrC" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="7" id="Ljy-pe-AHE"/>
+                    <constraint firstItem="17b-7a-GBW" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="OrU-Ei-Be4"/>
+                    <constraint firstAttribute="bottom" secondItem="Ifu-tX-LrC" secondAttribute="bottom" constant="12.67" id="Wd1-sF-KBz"/>
+                    <constraint firstItem="3kD-bP-nh7" firstAttribute="top" secondItem="Oyg-6M-f98" secondAttribute="bottom" constant="1.6699999999999999" id="b2k-zG-4sI"/>
+                    <constraint firstAttribute="trailing" secondItem="3kD-bP-nh7" secondAttribute="trailing" id="fbZ-U0-MIs"/>
+                    <constraint firstItem="Ifu-tX-LrC" firstAttribute="top" secondItem="3kD-bP-nh7" secondAttribute="bottom" constant="2" id="qM4-fM-Kmz"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -72,7 +62,7 @@
                 <outlet property="memolabel" destination="Ifu-tX-LrC" id="BRS-NO-FEv"/>
                 <outlet property="selectbutton" destination="Oyg-6M-f98" id="SMz-fa-lEM"/>
             </connections>
-            <point key="canvasLocation" x="138.93129770992365" y="54.929577464788736"/>
+            <point key="canvasLocation" x="232.82442748091603" y="33.802816901408455"/>
         </tableViewCell>
     </objects>
 </document>
